--- a/src/main/resources/prod.yaml
+++ b/src/main/resources/prod.yaml
@@ -2,8 +2,12 @@ http:
   host: "0.0.0.0"
   port: ""
   
+mongo:
+  host: "mongo-sapi.us-e2.cloudhub.io"
+  port: ""
+
 proc:
-  host: "localhost"
-  port: "8082"
+  host: "mongo-papi.us-e2.cloudhub.io"
+  port: ""
   
   
